--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
