--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/react": "^17.0.39",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
