--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "firebase": "^9.6.7",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
