--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.7",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
